--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/quiz_logo"
         android:label="@string/app_name"
@@ -13,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".splash.SplasScreen"
+            android:name=".login.SignUp"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -37,6 +38,13 @@
         <activity
             android:name=".activity.AboutContact"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <meta-data
+            xmlns:tools="http://schemas.android.com/tools"
+            android:name="io.fabric.ApiKey"
+            android:value="185cd65e35579c876af0ada8ca5fcc40ac8cded2"
+            tools:replace="android:value"/>
+
     </application>
 
 </manifest>
