--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,21 +13,30 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'himachalquiz'
+            keyPassword 'himachalquiz'
+            storeFile file('E:/All Keystore/himachalQuiz/himachalquiz.jks')
+            storePassword 'himachalquiz'
+        }
+    }
     compileSdkVersion 27
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "apextechies.gkquiz_hm"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+           // minifyEnabled true
+           // shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
@@ -35,14 +44,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     lintOptions {
         abortOnError false
         disable 'MissingTranslation'
     }
-
     dexOptions {
         javaMaxHeapSize "4g"
+    }
+    productFlavors {
     }
 }
 
@@ -71,7 +80,7 @@ dependencies {
     compile 'com.firebase:digitsmigrationhelpers:0.1.1'
     compile 'com.firebaseui:firebase-ui-auth:2.0.1'
     compile 'com.android.support:multidex:1.0.0'
-   // compile 'com.google.android.gms:play-services:11.4.0'
+    // compile 'com.google.android.gms:play-services:11.4.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true;
     }
