--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".login.SignUp"
+            android:name=".splash.SplasScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -37,6 +37,9 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".activity.AboutContact"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".login.SignUp"
             android:theme="@style/AppTheme.NoActionBar"/>
 
         <meta-data
